--- a/ReadMe
+++ b/ReadMe
@@ -7,7 +7,7 @@ Clone the project
 
 bash
 Copy code
-git clone git@github.com:archihalder/job-finder.git
+git clone git@github.com:Bhavith-Chandra/Job_Finder.git
 Enter the directory
 
 bash
